# Standard-Robot-Library

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cmake/: add_compile_options.cmake  add_exe.cmake  doxygen.cmake  eigen.cmake  fmt.cmake  gtest.cmake  initiate.cmake  tiny_xml2.cmake
examples/: CMakeLists.txt
examples/math/: CMakeLists.txt  example_math.cpp
examples/model/: CMakeLists.txt  example_model.cpp  model_benchmark.cpp
examples/utils/: CMakeLists.txt  example_utils.cpp
make/: build.mk  checks.mk
presets/: base.json  clang.json  emscripten.json  gcc.json  other.json
resources/: CMakeLists.txt  resources.cpp  robot_params.hpp
scripts/: build.py  check.py
srl/: CMakeLists.txt  concepts.hpp  constants.hpp  types.hpp
srl/common/: CMakeLists.txt  common.hpp  concepts.hpp  constants.hpp  types.hpp
srl/math/: CMakeLists.txt  math-impl.hpp  math.cpp  math.hpp
srl/models/: CMakeLists.txt  model-impl.hpp  model.cpp  model.hpp
srl/utils/: CMakeLists.txt  data_gen-impl.hpp  data_gen.hpp  timers-impl.hpp  timers.hpp  utils.cpp
tests/: CMakeLists.txt
tests/srl/: CMakeLists.txt
tests/srl/math/: CMakeLists.txt  test_math.cpp
tests/srl/models/: CMakeLists.txt  test_model_dyn.cpp  test_model_kin.cpp  test_model_set_get.cpp  test_params.hpp
tests/srl/utils/: CMakeLists.txt  test_data_gen.cpp  test_timers.cpp
